[metadata]
name = chrome_lens_py
version = 2.1.1
author = Bropines
author_email = bropines@gmail.com
description = Library to use Google Lens OCR for free via API used in Chromium on python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bropines/chrome-lens-py
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#using-a-src-layout
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    requests
    Pillow
    filetype
    lxml
    json5
    rich
    PySocks
    httpx[http2]
    socksio
    numpy

[options.extras_require]
dev =
    black
    isort
    flake8
    mypy
    safety
    bandit

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    lens_scan = chrome_lens_py.main:cli_run

[isort]
profile = black
src_paths = src

[flake8]
extend-ignore =
    # Line too long
    E501,
    E111
exclude =
    .git,
    experiments,
    .github,
    __pycache__,
    old,
    build,
    dist

per-file-ignores =
    # imported but unused
    __init__.py: F401