[metadata]
name = chrome_lens_py
version = 3.0.0
author = Bropines
author_email = bropines@gmail.com
description = Python library for Google Lens OCR and Translation using the crupload endpoint.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bropines/chrome-lens-py
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers

[options]
package_dir =
    = src 
packages = find: 
python_requires = >=3.8
install_requires =
    httpx[socks] >= 0.20
    Pillow >= 9.0
    betterproto >= 2.0.0b6
    filetype >= 1.0
    rich >= 10.0

[options.packages.find]
where = src
exclude =
    tests*

[options.entry_points]
console_scripts =
    lens_scan = chrome_lens_py.cli.main:run

[options.extras_require]
dev =
    black
    isort
    flake8
    mypy
    pytest
    pytest-asyncio
clipboard =
    pyperclip>=1.8

[isort]
profile = black

[flake8]
max-line-length = 120
extend-ignore =
    E203,
    W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    venv,
    .venv,
    lens_betterproto.py